--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.nerdyapps.balloonpop.GameActivity">
-
-    <!-- Container for pin icons, top right -->
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:id="@+id/toolBar"
-        android:background="@color/lightGrey">
+        >
 
         <Button
             android:id="@+id/go_button"
@@ -25,7 +23,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:onClick="goButtonCLickHandler"
-            android:text="@string/play_game" />
+            android:text="@string/pause_game" />
 
         <LinearLayout
             android:id="@+id/status_display"
