--- a/app/src/main/res/layout/activity_high_scores.xml
+++ b/app/src/main/res/layout/activity_high_scores.xml
@@ -1,13 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_high_scores"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/highscores_background"
+    android:orientation="vertical"
     tools:context="com.nerdyapps.balloonpop.HighScores">
+
+    <TextView
+        android:id="@+id/high_scores_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="@string/high_scores"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="45sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_below="@id/high_scores_view"
+        android:id="@+id/scoreView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/scoreView2"
+        android:layout_below="@id/scoreView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/scoreView3"
+        android:layout_width="wrap_content"
+        android:layout_below="@id/scoreView2"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+
+        android:id="@+id/scoreView4"
+        android:layout_below="@id/scoreView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    <com.google.android.gms.ads.NativeExpressAdView
+        android:layout_alignParentBottom="true"
+        android:id="@+id/highscore_ad_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="360x132"
+        ads:adUnitId="@string/ballon_pop_native_ad_unit_id"
+        />
 
 </RelativeLayout>
