--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
+    android:background="@drawable/dashboard_background"
     tools:context="com.nerdyapps.balloonpop.MainActivity">
 
-    <Button
-        android:text="@string/play_now"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/play_now_button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
 
-    <Button
-        android:text="@string/highscores"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:text="@string/play_now"
+            android:layout_height="wrap_content"
+            android:id="@+id/play_now_button"
+            android:layout_margin="10dp"
+            android:background="@android:color/holo_orange_dark"
+            android:layout_width="110dp" />
+        <Button
+            android:id="@+id/high_scores_button"
+            android:text="@string/highscores"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_orange_dark"
+            android:layout_margin="10dp"
+            android:layout_width="110dp" />
+
+
+    </LinearLayout>
+    <com.google.android.gms.ads.NativeExpressAdView
+        android:layout_alignParentBottom="true"
+        android:id="@+id/main_ad_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/play_now_button"
-        android:layout_alignLeft="@+id/play_now_button"
-        android:layout_alignStart="@+id/play_now_button"
-        android:id="@+id/high_scores_button" />
+        ads:adSize="320x132"
+        ads:adUnitId="@string/ballon_pop_native_ad_unit_id"
+        />
 </RelativeLayout>
